--- a/source/_posts/798艺术区.md
+++ b/source/_posts/798艺术区.md
@@ -5,6 +5,8 @@ categories: 随笔
 tags: [798]
 ---
 
+2017-06-04 北京798艺术区
+
 ![“抽象画”](http://o8cfktdb3.bkt.clouddn.com/line.jpeg)  
 抽象画
 <!--more-->
@@ -30,4 +32,4 @@ red people
 ![“恋人”](http://o8cfktdb3.bkt.clouddn.com/lover.jpeg)  
 恋人
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=436514312&auto=1&height=66"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28476557&auto=1&height=66"></iframe>
