--- a/source/_posts/北京十渡.md
+++ b/source/_posts/北京十渡.md
@@ -7,12 +7,12 @@ tags: [十渡,蹦极]
 
 ### 2017-04-17 北京十渡飞拉达、蹦极
 
-![蹦极](http://o8cfktdb3.bkt.clouddn.com/bengji01.jpeg)
+![蹦极](http://o8cfktdb3.bkt.clouddn.com/bengji.jpeg)
 　　今天真是玩嗨了
 <!--more-->
 　　早上六点起床，准备好之后早早出了门，乘地铁赶往公主坟与大家集合。到了集合地，坐着租的面包车开始前往目的地————十渡。
 　　十渡景区位于北京房山，到了景区之后，带队的队长确定参加飞拉达的人数开始买票。之前了解了一下飞拉达就是攀岩（岩壁探险或铁道式攀登），因为之前从来没参与过类似冒险运动，心里有点小紧张。因为人还比较多，所以一块请了一位教练。刚开始教练教授装备的穿戴，之后带领我们来到了攀岩的山脚下，教练说这座山大概有70多米，之后告诉了我们扣锁的使用，然后开始攀爬演示，小伙伴们也开始一个个紧随其后开始了攀爬之路。
-![飞拉达](http://o8cfktdb3.bkt.clouddn.com/feilada01.jpeg)
+![飞拉达](http://o8cfktdb3.bkt.clouddn.com/feilada.jpeg)
 　　飞拉达历经大约三个小时，穿越了ABCD区，终于到达了终点。教练帮我们把所有锁扣都挂到绳索上，下面是湖水，随着绳索划过去才算再次到达了地面。
 
 　　之后和大家一起腐败吃午餐，吃午餐的餐厅对面正好就是蹦极的跳台，是不是看着一个个挑战者坠落、弹跳...　由于某些原因（吃的有点多了，惭愧...），本来打算不参加蹦极了，但是一想如果不参加，回去之后一定会捶胸顿足，后悔不跌，而且同性的小伙伴除了一对情侣之外都参加了，狠了狠心还是买了票。
