--- a/source/_posts/2017玉渊潭樱花节.md
+++ b/source/_posts/2017玉渊潭樱花节.md
@@ -7,8 +7,9 @@ tags: [玉渊潭,樱花节]
 
 ### 2017-04-08 玉渊潭樱花节
 
-![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan04.JPG)
+<center>![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan04.JPG)</center>
 
+<center>
 去年就打算去玉渊潭看花的
 忘了是什么原因错过了花期，没能去成
 心里总觉得遗憾
@@ -19,8 +20,10 @@ tags: [玉渊潭,樱花节]
 
 最重要的是去了，并且看到了
 不是么~~
+</center>
 
-![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan02.JPG)
+<center>![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan02.JPG)</center>
 
-![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan03.JPG)
+</br>
+<center>![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan03.JPG)</center>
 
