--- a/source/_posts/798艺术区.md
+++ b/source/_posts/798艺术区.md
@@ -6,31 +6,30 @@ tags: [798]
 comments: true
 ---
 
-2017-06-04 北京798艺术区
+## 2017-06-04 北京798艺术区
 
-![“抽象画”](http://o8cfktdb3.bkt.clouddn.com/line.jpeg)  
-抽象画
+<center>![“抽象画”](http://o8cfktdb3.bkt.clouddn.com/line.jpeg)</center>  
+<center>抽象画</center>
 <!--more-->
+<center>![“陶瓷”](http://o8cfktdb3.bkt.clouddn.com/chinese.jpeg)</center>
+<center>各种小陶瓷</center>
 
-![“陶瓷”](http://o8cfktdb3.bkt.clouddn.com/chinese.jpeg)
-各种小陶瓷
+<center>![“卡哇伊”](http://o8cfktdb3.bkt.clouddn.com/cat.jpeg) </center>
+<center>猫咪，卡哇伊</center>
 
-![“卡哇伊”](http://o8cfktdb3.bkt.clouddn.com/cat.jpeg) 
-猫咪，卡哇伊
+<center>![“brain”](http://o8cfktdb3.bkt.clouddn.com/brain.jpeg) </center>
+<center>brain</center>
 
-![“brain”](http://o8cfktdb3.bkt.clouddn.com/brain.jpeg) 
-brain
+<center>![“red people”](http://o8cfktdb3.bkt.clouddn.com/redpeople.jpeg)</center>
+<center>red people</center>
 
-![“red people”](http://o8cfktdb3.bkt.clouddn.com/redpeople.jpeg)
-red people
+<center>![“未名”](http://o8cfktdb3.bkt.clouddn.com/unknown.jpeg) </center>
+<center>未名</center>
 
-![“未名”](http://o8cfktdb3.bkt.clouddn.com/unknown.jpeg) 
-未名
+<center>![“孤独的小孩”](http://o8cfktdb3.bkt.clouddn.com/child.jpeg) </center> 
+<center>孤独的小孩</center>
 
-![“孤独的小孩”](http://o8cfktdb3.bkt.clouddn.com/child.jpeg)  
-孤独的小孩
+<center>![“恋人”](http://o8cfktdb3.bkt.clouddn.com/lover.jpeg) </center>
+<center>恋人</center>
 
-![“恋人”](http://o8cfktdb3.bkt.clouddn.com/lover.jpeg)  
-恋人
-
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28476557&auto=1&height=66"></iframe>
+<center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28476557&auto=1&height=66"></iframe></center>
