--- a/source/_posts/摘抄语录.md
+++ b/source/_posts/摘抄语录.md
@@ -1,5 +1,5 @@
 ---
-title: 语录
+title: 摘抄语录
 date: 2018-02-02 15:45:09
 categories: 随笔
 tags: [语录]
@@ -9,17 +9,29 @@ toc:
 永远年轻，永远热泪盈眶，永远在路上。
 <!--more-->
 我已亭亭，无忧亦无惧。
+
 什么都不在乎，就无所畏惧。
+
 自律即自由。
+
 人生苦短三万天，为了面子骗骗别人没关系，别骗自己。
+
 life sucks but you will love it
+
 不为其困，方为自在
+
 没有什么对错，也没有什么谁比谁幸福。幸福这种东西，从来都是只有自己才知道。
+
 不乱于心，不困于情，不惧未来，不念过往。
+
 死亡并不是生命的终点，遗忘才是。
-爱情是有浓度的
+
+爱情是有浓度的。
+
 有些事情，如果你现在不去做，那么也许你一辈子都没有机会了
+
 放纵的灵魂就只配活成一摊松垮臃肿的肉
+
 我们毕生所求，不过是真爱和自由！
 
 三毛
@@ -34,12 +46,9 @@ life sucks but you will love it
 
 男人的爱情永远靠的是吸引和征服而不是感动
 
-美丽其实又是实实在在的。
-是劳累之后立即洗净的那张脸；是走出厨房之后擦满护肤霜的那双手；是临出门前涂上口红的那瓣唇；是走路时傲然挺起的那片腰身；是面对各种诱惑的那份节制；是人群里永远恰当的那抹微笑；是面对荣辱水远镇定的那副神情……
+美丽其实又是实实在在的。是劳累之后立即洗净的那张脸；是走出厨房之后擦满护肤霜的那双手；是临出门前涂上口红的那瓣唇；是走路时傲然挺起的那片腰身；是面对各种诱惑的那份节制；是人群里永远恰当的那抹微笑；是面对荣辱水远镇定的那副神情……
 
-先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；
-然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；
-最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
+先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
 
 喜欢一个人，始于颜值，陷于才华，忠于人品，而善良又是最重要的，就像童话故事里的灰姑娘，要坚强而又勇敢，仁慈而又善良。
 
@@ -56,5 +65,4 @@ life sucks but you will love it
 我们来北京难道不是为了艳压三里屯！亮瞎五道口的吗？
 
 著名女作家龙应台在《目送》里写道，她送儿子华安去美国，站在等候安检的队伍外面，看着儿子一步一步地往里走，她一直在等待，等待儿子回头看自己一眼，但是始终华安都没有回头。
-
 后来，她渐渐明白，所谓父母子女一场，不过意味着你和他的缘分就是今生今世不断地目送他渐行渐远，你站在路的这一端，看着他渐渐消失在小路转弯的地方，然后，他用背影默默地告诉你：“不必追。”
