--- a/source/_posts/几种常见算法.md
+++ b/source/_posts/几种常见算法.md
@@ -149,5 +149,23 @@ f1=f2;
 f2=f;             
 ```
 
-
+## 请用代码或者伪代码打印输出一个菱形
+```
+void print(int n)
+{
+int i,j;
+for(i=1; i<=n; i++)
+{
+for(j=1; j<=n-i; j++){ printf(" "); }
+for(j=n-i+1; j<n+i; j++){ printf("*"); }
+printf("\n");
+}
+for(i=n-1; i>=1; i--)
+{
+for(j=1; j<=(n-i); j++){ printf(" "); }
+for(j=n-i+1; j<n+i; j++){ printf("*"); }
+printf("\n");
+}
+}
+```
 
