--- a/source/_posts/2017玉渊潭樱花节.md
+++ b/source/_posts/2017玉渊潭樱花节.md
@@ -7,7 +7,7 @@ tags: [玉渊潭,樱花节]
 
 ### 2017-04-08 玉渊潭樱花节
 
-<center>![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan04.JPG)</center>
+<center>![](/assets/20170418_yuyuantan/yuyuantan04.JPG)</center>
 
 <center>
 去年就打算去玉渊潭看花的
@@ -22,8 +22,8 @@ tags: [玉渊潭,樱花节]
 不是么~~
 </center>
 
-<center>![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan02.JPG)</center>
+<center>![](/assets/20170418_yuyuantan/yuyuantan02.JPG)</center>
 
 </br>
-<center>![](http://o8cfktdb3.bkt.clouddn.com/yuyuantan03.JPG)</center>
+<center>![](/assets/20170418_yuyuantan/yuyuantan03.JPG)</center>
 
