--- a/source/_posts/798艺术区.md
+++ b/source/_posts/798艺术区.md
@@ -8,28 +8,28 @@ comments: true
 
 ## 2017-06-04 北京798艺术区
 
-<center>![“抽象画”](http://o8cfktdb3.bkt.clouddn.com/line.jpeg)</center>  
+<center>![“抽象画”](/assets/20170640_798/line.jpeg)</center>  
 <center>抽象画</center>
 <!--more-->
-<center>![“陶瓷”](http://o8cfktdb3.bkt.clouddn.com/chinese.jpeg)</center>
+<center>![“陶瓷”](/assets/20170640_798/chinese.jpeg)</center>
 <center>各种小陶瓷</center>
 
-<center>![“卡哇伊”](http://o8cfktdb3.bkt.clouddn.com/cat.jpeg) </center>
+<center>![“卡哇伊”](/assets/20170640_798/cat.jpeg) </center>
 <center>猫咪，卡哇伊</center>
 
-<center>![“brain”](http://o8cfktdb3.bkt.clouddn.com/brain.jpeg) </center>
+<center>![“brain”](/assets/20170640_798/brain.jpeg) </center>
 <center>brain</center>
 
-<center>![“red people”](http://o8cfktdb3.bkt.clouddn.com/redpeople.jpeg)</center>
+<center>![“red people”](/assets/20170640_798/redpeople.jpeg)</center>
 <center>red people</center>
 
-<center>![“未名”](http://o8cfktdb3.bkt.clouddn.com/unknown.jpeg) </center>
+<center>![“未名”](/assets/20170640_798/unknown.jpeg) </center>
 <center>未名</center>
 
-<center>![“孤独的小孩”](http://o8cfktdb3.bkt.clouddn.com/child.jpeg) </center> 
+<center>![“孤独的小孩”](/assets/20170640_798/child.jpeg) </center> 
 <center>孤独的小孩</center>
 
-<center>![“恋人”](http://o8cfktdb3.bkt.clouddn.com/lover.jpeg) </center>
+<center>![“恋人”](/assets/20170640_798/lover.jpeg) </center>
 <center>恋人</center>
 
 <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28476557&auto=1&height=66"></iframe></center>
