--- a/source/_posts/常见算法总结.md
+++ b/source/_posts/常见算法总结.md
@@ -172,46 +172,33 @@ return 0;
 ```
 int main(int argc, char *argv[]) {
 
-int array[10] = {24, 17, 85, 13, 9, 54, 76, 45, 5, 63};
+    int array[10] = {24, 17, 85, 13, 9, 54, 76, 45, 5, 63};
 
-int num = sizeof(array)/sizeof(int);
+    int num = sizeof(array)/sizeof(int);
 
-for(int i = 0; i < num-1; i++) {
+    for(int i = 0; i < num-1; i++) {
 
-for(int j = 0; j < num - 1 - i; j++) {
+        for(int j = 0; j < num - 1 - i; j++) {
 
-if(array[j] < array[j+1]) {
+            if(array[j] < array[j+1]) {
 
-int tmp = array[j];
+                int tmp = array[j];
+                array[j] = array[j+1];
+                array[j+1] = tmp;
+            }
+        }
+    }
 
-array[j] = array[j+1];
+    for(int i = 0; i < num; i++) {
 
-array[j+1] = tmp;
-
-}
-
-}
-
-}
-
-for(int i = 0; i < num; i++) {
-
-printf("%d", array[i]);
-
-if(i == num-1) {
-
-printf("\n");
-
-}
-
-else {
-
-printf(" ");
-
-}
-
-}
-
+        printf("%d", array[i]);
+        if(i == num-1) {
+            printf("\n");
+        }
+        else {
+            printf(" ");
+        }
+    }
 }
 ```
 
@@ -253,19 +240,19 @@ f2=f;
 ```
 void print(int n)
 {
-int i,j;
-for(i=1; i<=n; i++)
-{
-for(j=1; j<=n-i; j++){ printf(" "); }
-for(j=n-i+1; j<n+i; j++){ printf("*"); }
-printf("\n");
-}
-for(i=n-1; i>=1; i--)
-{
-for(j=1; j<=(n-i); j++){ printf(" "); }
-for(j=n-i+1; j<n+i; j++){ printf("*"); }
-printf("\n");
-}
+    int i,j;
+    for(i=1; i<=n; i++)
+    {
+        for(j=1; j<=n-i; j++){ printf(" "); }
+        for(j=n-i+1; j<n+i; j++){ printf("*"); }
+        printf("\n");
+    }
+    for(i=n-1; i>=1; i--)
+    {
+        for(j=1; j<=(n-i); j++){ printf(" "); }
+        for(j=n-i+1; j<n+i; j++){ printf("*"); }
+        printf("\n");
+    }
 }
 ```
 
@@ -311,153 +298,43 @@ int gcd(int a,int b){
 ## 给定一个字符串，输出本字符串中只出现一次并且最靠前的那个字符的位置？如“abaccddeeef”,字符是b,输出应该是2
 思路：创建一个空数组，默认元素都为-1，遍历字符串一遍，存下每个字母的位置，如果存过一次，就把位置设置为-2，
 ```
-char *strOutPut(char *);
+#include     <stdio.h>
+#include     <stdlib.h>
+#include     <string.h>
 
-
-int compareDifferentChar(char, char *);
-
-
-int main(int argc, const char * argv[]) {
-
-
-char *inputStr = "abaccddeeef";
-
-char *outputStr = strOutPut(inputStr);
-
-printf("%c \n", *outputStr);
-
-return 0;
-
-}
-
-
-char *strOutPut(char *s) {
-
-char str[100];
-
-char *p = s;
-
-int index = 0;
-
-while (*s != '\0') {
-
-if (compareDifferentChar(*s, p) == 1) {
-
-str[index] = *s;
-
-index++;
-
-}
-
-s++;
-
-}
-
-return &str;
-}
-
-
-int compareDifferentChar(char c, char *s) {
-
-int i = 0;
-
-while (*s != '\0' && i<= 1) {
-
-if (*s == c) {
-
-i++;
-
-}
-
-s++;
-}
-
-if (i == 1) {
-
-return 1;
-
-} else {
-
-return 0;
-
-}
-
-}
-```
-
-```
-int main(int argc, const char * argv[]) {
-    char *inputStr = "abacddbeeef";
-    char *outputStr = strOutPut(inputStr);
-    NSLog(@"%c",*outputStr);
-}
-
-char *strOutPut(char *s){
-    char str[100];
-    char *p = s;
-    int  index = 0;
-    while (*s != '\0') {
-        if(compareDifferentChar(*s, p)==1){
-            str[index] = *s;
-            index++;
-        }
-        s++;
-    }
-    return &str;
-}
-
-int compareDifferentChar(char c,char *s){
+int find_char(const char* str)
+{
+    static int pos[256];
+    const unsigned char* p = (const unsigned char*)str;
     int i = 0;
-    while (*s != '\0' && i<=1) {
-        if (*s == c) {
-            i++;
+    if( (!str) || (!(*str)) ) return -1;
+    memset(pos,-1,sizeof(pos));
+    while(*p){
+        if(pos[*p] == -1){
+            pos[*p] = p-(const unsigned char*)str;
+        }else{
+            pos[*p] = -2;
         }
-        s++;
+        p++;
     }
-    if (i == 1) {
-        return 1;
-    }else{
-        return 0;
+    for(i=0;i<sizeof(pos)/sizeof(pos[0]);i++){
+        if(pos[i]>=0)return pos[i];
     }
-}
-```
-
-另外一种：
-```
-void test2() {
-char *inputStr = "abacddbeeef";
-char *outputStr = strOutPut(inputStr);
-NSLog(@"%c",*outputStr);
+    return -1;
 }
 
-char *strOutPut(char *s){
-char str[100];
-char *p = s;
-int  index = 0;
-while (*s != '\0') {
-if(compareDifferentChar(*s, p)==1){
-str[index] = *s;
-index++;
-}
-s++;
-}
-return &str;
+int main()
+{
+    const char* p = "abaccddeeef";
+    int pos = find_char(p);
+    printf("index:%d, it is '%c'\n",pos,pos!=-1?p[pos]:' ');
+
+    p = "abcdefghijklmnopqrstuvwxyz abcdefghijklmnopqrstu wxyz ";
+    pos = find_char(p);
+    printf("index:%d, it is '%c'\n",pos,pos!=-1?p[pos]:' ');
+    return 0;
 }
 
-int compareDifferentChar(char c,char *s){
-int i = 0;
-while (*s != '\0' && i<=1) {
-if (*s == c) {
-i++;
-}
-s++;
-}
-if (i == 1) {
-return 1;
-}else{
-return 0;
-}
-}
 ```
 
 ## 给定一个整数，问这个整数转成2进制后，里面包含有多少个1？比如：10，二进制表示为，1010则，输出2
@@ -481,7 +358,6 @@ int howmany(int x)
 ## 计算阶乘
 ```
 int f(int i)
-
 {
     int t=1,j;
 
@@ -489,11 +365,10 @@ int f(int i)
     t=t*j;
 
     return t;
-
 }
 ```
 
-## 
+## 现有一个M行N列的数组,要求安装反向斜对角线(右上->左下)的方式,打印该数组.
 ```
 //    int m = 5,n = 4;
 int m ,n;
