--- a/source/_posts/五笔输入法学习.md
+++ b/source/_posts/五笔输入法学习.md
@@ -10,6 +10,7 @@ toc:
 ### 横 GFDSA
 11 G 王旁青头戋五一
 12 F 土士二干十寸雨
+<!--more-->
 13 D 大犬三羊古石厂
 14 S 木丁西
 15 A 工戈草头右框七
@@ -24,9 +25,9 @@ toc:
 ### 撇 TREWQ
 31 T 禾竹一撇双人立， 反文条头共三一
 32 R 白手看头三二斤
-33 E 月衫乃用家衣底
-34 W 人和八，三四里
-35 Q 金勺缺点无尾鱼，犬旁留乂儿一点夕，氏无七
+33 E 月衫乃用家衣底，豹头豹尾与舟底
+34 W 人和八三四里，祭头登头在其底
+35 Q  金勺缺点无尾鱼。犬旁留叉一点儿夕，氏无七（妻）
 
 ### 捺 YUIOP
 41 Y 言文方广在四一，高头一捺谁人去
@@ -37,12 +38,86 @@ toc:
 
 ### 折 NBVCX
 51 N 已半巳满不出己，左框折尸心和羽
-52 B 子耳了也框向上
+52 B 子耳了也框向上，两折也在五耳里
 53 V 女刀九臼山朝西
-54 C 又巴马，丢矢矣
+54 C 又巴马，经有上，勇字头，丢矢矣
 55 X 慈母无心弓和匕，幼无力
 
 ![五笔键盘](/assets/20180725_wubi/wubi.gif)
+
+
+## 五笔字型输入法拆字原则
+
+① 顺序拆分：按正确的书写顺序进行 
+例：新：应为“立、木、斤”而非“立、斤、木” 
+中：应为“口、丨”而非“丨、口” 
+夷：应为“一、弓、人”而非“大、弓” 
+
+② 取大优先：再添一笔画便不能称为字根。“字根尽可能大，尽可能笔画多” 
+例：世：应为“廿、乙”而非“艹、一、乙” 
+
+③ 兼顾直观：为照顾汉字的完整性，暂且牺牲下“书写顺序”和“取大优先”原则。 
+例：国：按书写顺序拆分“冂、王、丶、一”，这样就破坏了这个字的直观性，所以我们把它拆成“囗、王、丶” 
+自：按取大优先的及书写顺序为“亻、乙、三”，很不直观，所以我们把它拆分为“丿、目” 
+
+④ 能散不连：笔画和字根之间，字根和字根之间的关系，可以有“散、连、交”三种。但有时一个汉字拆成的几个部分都是“复笔”（字根都不是单笔画），它们之间的关系常常在“散”和“连”之间，模棱两可，如：占、卜、严、像这样既能“散”，又能“连”时，五笔规定，只要不是单笔画一律按“能散不连”判别。这样的字还有“足、充、首、左、布、页、美、易、麦等。 
+
+⑤ 能连不交：当一个字既可拆成相连的几个部分，又可拆分成相交的几部分时，我们认为“相连“正确。如生：应为“丿、青头”，开：“一、廾”， 拆分时还要注意：一个笔画不能割断在两个字根之间。 
+如：果：应为“日、木” 
+拆分口诀为：单勿需拆、散拆简单、难在交连、笔画勿断、能散不连、兼顾直观、能连不交、取大优先
+
+### 五笔字根拆分口决
+键名汉字打四下，基本字根请照搬；
+一二三末取四码，顺序拆分大优先；
+不足四码要注意，交叉识别补后边。
+
+### 单字
+一、键名字：字根的第一个字
+输入方法:击键四次    如: 王(GGGG)
+
+二、成字字：每键上除键名字以外的独体字 (即属于汉字又是字根)
+输入方法:报户口+首笔+次笔+末笔    如: 五(GGHG)
+
+### 合体字
+合体字特例：一级简码 二级简码 三级简码
+一级简码: 只要击键一次，再加击一次空格键的25个字
+如: 一(G+空格) 地(F+空格)
+二级简码: 前两码+空格(只用前两个字根编码)
+如: 于(GF+空格) 玫(GT+空格)
+三级简码: 前三码+空格
+如: 脑(EYB+空格)
+合体字不足四字字根:
+1. 补空格 
+2. 使用末笔字根
+3. 使用末笔字根输不出按空格
+
+### 识别码
+当一个字拆不够4个码元时，它的输入编码是：先打完码元码，再追加一个“末笔字型识别码”，简称“识别码”。
+1. 看末笔画--------决定区
+2. 看结构  --------决定键
+左右结构在1号键
+如:礼(PYNN)末笔是在折区 结构是左右在1号键
+上下结构在2号键
+如:美(UGDU)末笔是在捺区 结构是上下在2号键
+杂合结构在3号键
+如:同(MGKD)末笔是在横区 结构是杂合在3号键
+
+
+![末笔字型交叉识别码图][/assets/20180725_wubi/wubi1.jpg]
+## 词语
+* 二字词
+取每个汉字的前两码
+如:文明(YYJE)
+* 三字词
+取前两字的第一码加上第三字的前两码
+如:电视机(JPSM)
+* 四字词
+取每字的第一码
+如:同心协力(MNFL)
+* 多字词
+取前三字和最末字的第一码
+如:中华人民共和国(KWWL)
+
 
 参考文章：http://www.wb86.com/wbwz/86help.htm
 https://jingyan.baidu.com/article/00a07f3853872e82d028dc9b.html
