--- a/source/_posts/五笔输入法学习.md
+++ b/source/_posts/五笔输入法学习.md
@@ -27,7 +27,7 @@ toc:
 32 R 白手看头三二斤
 33 E 月衫乃用家衣底，豹头豹尾与舟底
 34 W 人和八三四里，祭头登头在其底
-35 Q  金勺缺点无尾鱼。犬旁留叉一点儿夕，氏无七（妻）
+35 Q  金勺缺点无尾鱼。犬旁留儿一点儿夕，氏无七（妻）
 
 ### 捺 YUIOP
 41 Y 言文方广在四一，高头一捺谁人去
@@ -38,7 +38,7 @@ toc:
 
 ### 折 NBVCX
 51 N 已半巳满不出己，左框折尸心和羽
-52 B 子耳了也框向上，两折也在五耳里
+52 B 子耳了也框向上，两折也在五二里
 53 V 女刀九臼山朝西
 54 C 又巴马，经有上，勇字头，丢矢矣
 55 X 慈母无心弓和匕，幼无力
@@ -103,7 +103,7 @@ toc:
 如:同(MGKD)末笔是在横区 结构是杂合在3号键
 
 
-![末笔字型交叉识别码图][/assets/20180725_wubi/wubi1.jpg]
+![末笔字型交叉识别码图](/assets/20180725_wubi/wubi1.jpg)
 ## 词语
 * 二字词
 取每个汉字的前两码
