--- a/source/_posts/五笔输入法学习.md
+++ b/source/_posts/五笔输入法学习.md
@@ -45,6 +45,23 @@ toc:
 
 ![五笔键盘](/assets/20180725_wubi/wubi.gif)
 
+## 一级编码
+GFDSA 一地在要工
+HJKLM 上是中国同
+TREWQ 和的有人我
+YUIOP 主产不为这
+NBVCX 民了发以经
+* 在中国，工人和地主是不同的；经我同以，民工上了工地；我要发了！在我国这一主要工地上有的产不了。
+* 打词组时要以汉字的全码为基础，打词组时跟一级简码没有任何关系！
+![一级编码](/assets/20180725_wubi/yijibianma.png)
+
+## 键面字
+GFDSA 王土大木工
+HJKLM 目日口田山
+TREWQ 禾白月人金
+YUIOP 言立水火之
+NBVCX 已子女又比
+![键面字](/assets/20180725_wubi/jianmianzi.png)
 
 ## 五笔字型输入法拆字原则
 
@@ -91,8 +108,22 @@ toc:
 2. 使用末笔字根
 3. 使用末笔字根输不出按空格
 
+单字输入的基本规则
+在五笔字根键位图上，除键面上的字根以外的汉字的输入规则（大部分汉字的输入方法，键面字，识别码字，成字字根字除外）:
+一，如果只能拆分为两个字根， 就打：第一字根 + 第二字根 + 空格
+如“明”字，拆分为“日”和“月”两个字根打“J” “E”再打空格
+
+二，如果只能拆分为三个字根， 就打：第一字根 + 第二字根 + 第三字根 + 空格
+如“些”字，拆分为“止”和“匕” “二” 三个字根打“H” “X” “F”再打空格
+
+三，如果只能拆分为四个字根， 就打：第一字根 + 第二字根 + 第三字根 + 第四字根
+如“命”字，拆分为“人” “一” “口” “卩”四个字根打“W” “G” “K” “B”
+
+四，如果拆分超过四个字根， 就打：第一字根 + 第二字根 + 第三字根 + 最末字根
+如“厨”字，拆分为“厂” “一” “口” “寸”四个字根打“D” “G” “K” “F”
+
 ### 识别码
-当一个字拆不够4个码元时，它的输入编码是：先打完码元码，再追加一个“末笔字型识别码”，简称“识别码”。
+本来按上述规则就可打所有的单个汉字了，但五笔字型为了减少重码，为了避免因打字选字降低打字速度，当一个字拆不够4个码元时就加一个识别码，它的输入编码是：先打完码元码，再追加一个“末笔字型识别码”，简称“识别码”。
 1. 看末笔画--------决定区
 2. 看结构  --------决定键
 左右结构在1号键
@@ -102,8 +133,32 @@ toc:
 杂合结构在3号键
 如:同(MGKD)末笔是在横区 结构是杂合在3号键
 
+![末笔字型交叉识别码图1](/assets/20180725_wubi/wubi2.png)
+![末笔字型交叉识别码图2](/assets/20180725_wubi/wubi1.jpg)
 
-![末笔字型交叉识别码图](/assets/20180725_wubi/wubi1.jpg)
+### 规律
+G 横横 一横
+F 横竖 二横
+D 横撇 三横
+
+H 一竖
+J 二竖
+K 三竖
+L 四
+
+T 撇横
+R 撇竖
+E 撇折
+
+Y 一点
+U 两点
+ I  三点
+O 四点
+
+1：“王”这个字根的第一笔是“一”，第二笔是“一”，所以“横中横”，在中行左边横区5个键中的从中间往外数的横位上（第1个键，G键）
+2：“土”这个字根的第一笔是“一”，第二笔是“丨”，所以“横中竖”，在中行左边横区5个键中的从中间往外数的竖位上（第2个键，F键）
+3：“大”这个字根的第一笔是“一”，第二笔是“丿”，所以“横中撇”，在中行左边横区5个键中的从中间往外数的撇位上（第3个键，D键，而且还有发音为"D"这个特殊记忆方式）
+
 ## 词语
 * 二字词
 取每个汉字的前两码
@@ -119,5 +174,6 @@ toc:
 如:中华人民共和国(KWWL)
 
 
-参考文章：http://www.wb86.com/wbwz/86help.htm
-https://jingyan.baidu.com/article/00a07f3853872e82d028dc9b.html
+参考文章：[五笔打字教程（86版简明教程）](http://www.wb86.com/wbwz/86help.htm)
+[教你轻松快速的熟记五笔字根](https://jingyan.baidu.com/article/00a07f3853872e82d028dc9b.html)
+[5分钟学会五笔 (不用背口诀)](http://www.360doc.com/content/15/0917/19/1204156_499795201.shtml)
