--- a/source/_posts/那些很喜欢的句子.md
+++ b/source/_posts/那些很喜欢的句子.md
@@ -6,7 +6,7 @@ tags:
 toc:
 ---
 
-## 那些很美的句子
+## 那些很喜欢的句子
 ----------------------
 * 人间烟火，山河远阔。 无一是你，无一不是你。
 * 我已亭亭，无忧亦无惧。
@@ -17,6 +17,19 @@ toc:
 * 愿你余生遇良人，爱得不慌不忙，坦坦荡荡。
 * 该经历的都经历过，该放下的都放下了，余下的，便是举重若轻，从容淡定。
 * 生命来来往往，来日并不方长。
+* 这个世界疯狂，没人性，腐败。你却一直清醒，温柔，一尘不染。
+<center>
+摊开双手
+我空无一物
+天空有云
+舒卷于胸
+</center>
+
+* 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至
+* 委屈受多了，给我再多糖也会扔
+* 生命中的全部偶然，其实都是命中注定
+* 生活最厉害的招数是用心，其次就是仪式感
+* 其实我们每个人都是胆小鬼，有这样那样畏首畏尾的时刻。希望每一个心有想法的人，都能打破舒适圈，去追求不可想象的漂泊生活，勇敢又智慧，自由又有钱。
 
 ## 那些很有哲理的句子
 ----------------------
@@ -25,6 +38,23 @@ toc:
  > 我相信生命，我相信尚未认识的你，因为总有一天你会成为我最爱的东西：空气，流水，植物，那个少年。     ——塞尔努达
  
  > 所谓父母子女一场，不过意味着你和他的缘分就是今生今世不断地目送他渐行渐远，你站在路的这一端，看着他渐渐消失在小路转弯的地方，然后，他用背影默默地告诉你：“不必追。”        ——龙应台
+ 
+ > 你要接受这世界上总有突如其来的失去，洒了的牛奶，遗失的钱包，走散的爱人，断掉的友情等。当你做什么都于事无补的时候，唯一能做的，就是努力让自己过的好一点，丢都丢了，就别再哭了。
+ 
+ > 你如果认识从前的我,也许你会原谅现在的我.——张爱玲《倾城之恋》
+ > 如果你给我的,和你给别人的是一样的,那我就不要了——三毛
+ <center>
+ 草在结它的种子
+ 风在摇它的叶子
+ 我们站着，不说话
+ 就十分美好——顾城
+ </center>
+ 
+ > 每一个不曾起舞的日子，都是对生命的辜负。一个人知道自己为什么而活，就可以忍受任何一种生活。其实人跟树是一样的，越是向往高处的阳光，它的根就越要伸向黑暗的地底。 ——尼采
+ > 听过很多道理 却依然过不好这一生。——韩寒
+ > 在有生的瞬间能遇见你，竟花光我所有的运气——林夕
+ > 你走，我不送你。你来，无论多大风多大雨，我要去接你。——梁实秋
+ > 哪里会有人喜欢孤独,不过是不喜欢失望。——村上春树《挪威的森林》
 
 ## 那些应该牢记的道理
 ----------------------
@@ -32,10 +62,7 @@ toc:
 * 不为其困，方为自在
 * 没有什么对错，也没有什么谁比谁幸福。幸福这种东西，从来都是只有自己才知道。
 * 人生苦短三万天，为了面子骗骗别人没关系，别骗自己。
-* 不要：抱怨，炫耀，数落，搬弄是非
-* 美丽包括你全方位的肤质，气色，容貌，身材，体态，甚至包括你说法的语气方式，你的谈吐，见识，又细碎到你的生活习惯。
 * 1.人际交往中的期望值管理能力；2.阈值自控意识；3.应对主观时空扭曲的能力
-* 自律即自由。
 * 不乱于心，不困于情，不惧未来，不念过往。
 * 死亡并不是生命的终点，遗忘才是。
 * 爱情是有浓度的。
@@ -45,6 +72,55 @@ toc:
 * 每个人都是困于人世的西西弗斯，也许我们无法逃脱，勇于选择并且终于选择就好。
 * 美丽是实实在在的。是劳累之后立即洗净的那张脸；是走出厨房之后擦满护肤霜的那双手；是临出门前涂上口红的那瓣唇；是走路时傲然挺起的那片腰身；是面对各种诱惑的那份节制；是人群里永远恰当的那抹微笑；是面对荣辱水远镇定的那副神情……
 * 先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
+* 如果有幸遇到能凑合忍得了的人，就用尽全力抓紧，无论如何都不要放手。
+* 幸福就是找个温暖的人过一辈子。
+* 爱一个人最好的方式，是经营好自己，给对方一个优质的爱人。不是拼命对一个人好，那人就会拼命爱你。俗世的爱情难免有现实的一面：你有价值，你的付出才有人重视。
+* 我很清楚的知道，这条路走下去会很艰难，但不走好像又会后悔一辈子。
+* 最痛苦的事，不是失败，是我本可以。
+* 不要羡慕别人比你过的好，他们假装的。
+* 你说的很对，不过我不听。
+
+<center>
+最好的爱情就是
+两个人都是独立的个体
+都可以不用掩饰的做自己
+都有自己的追求和梦想
+但是在我们独自打拼的时光里
+都会把彼此放在心上
+都会知道我们的每一份努力都是为了
+两个人的支流最终能汇聚成爱情的长河
+往时光的尽头永无止境的流淌
+</center>
+
+<center>
+一生只谈一次恋爱是最好的
+经历的太多了，会麻木
+分离的多了，会习惯
+换恋人多了，会比较
+到最后，你不会再相信爱情
+其实对于爱情，越单纯越幸福
+</center>
+
+### 自身提升：
+* 干净的圈子，规律的生活，中意的人
+* 温柔，持家，自信，睿智，气质，情趣，大度，漂亮，幽默，情调
+* 不要：抱怨，炫耀，数落，搬弄是非
+* 美丽包括你全方位的肤质，气色，容貌，身材，体态，甚至包括你说法的语气方式，你的谈吐，见识，又细碎到你的生活习惯。
+* 自律即自由。
+* 自律一段时间被打回原形，你忽略了重要的一点：自身非常强烈想要实现一个目标，并把一系列有些挑战性的行动固化成自然的习惯。
+    
+* 1.早睡早起身体好
+* 2.微笑是一种思维
+* 3.管住嘴是一种本事
+* 4.做一个清清爽爽的人
+* 5.给自己找一个能常年坚持的运动项目
+* 6.尽量除去走走看看
+
+### 沟通注意：
+* 听别人把话说完
+* 否定之前，先给出肯定
+* 任何评价都要对事不对人，并给出具体的解释
+
 
 <!--谈恋爱时，作死的程度不要超过漂亮的程度，人际交往中，耿直的程度不要超过能力的限度-->
 <!--遇见强势的人要示弱，遇见自卑的人要尊重，遇见有趣的人要勾搭-->
