--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -1,33 +1,47 @@
 ---
-title: 那些很喜欢的句子
+title: 收藏句子
 date: 2018-02-02 15:45:09
 categories: 随笔
 tags: 
 toc:
 ---
 
-## 那些很喜欢的句子
+<center>![蹦极](/assets/20180202_shoucang/shoucang.jpeg)</center>
+
+## 那些很文艺的句子
 ----------------------
+
 * 人间烟火，山河远阔。 无一是你，无一不是你。
 * 我已亭亭，无忧亦无惧。
-<!--more-->
-* 我们毕生所求，不过是真爱和自由！
 * 永远年轻，永远热泪盈眶，永远在路上。
-* life sucks but you will love it.
+<!--more-->
 * 愿你余生遇良人，爱得不慌不忙，坦坦荡荡。
-* 该经历的都经历过，该放下的都放下了，余下的，便是举重若轻，从容淡定。
 * 生命来来往往，来日并不方长。
 * 这个世界疯狂，没人性，腐败。你却一直清醒，温柔，一尘不染。
+* 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至
+* 委屈受多了，给我再多糖也会扔
+* 生命中的全部偶然，其实都是命中注定
 <center>
 摊开双手
 我空无一物
 天空有云
 舒卷于胸
 </center>
+* 日子熬我，我熬粥
+* 多一些不需要理由的开心
+* 一直都在辜负生活，所以生活也不曾善待我们
+* 在最难过的那天夜里，我是一个人过的
+* 究竟什么样的终点，才配得上这一路颠沛流离
+* 要长大 要乖 要努力 要不负众望
+* 喜欢有阳光的早上 好像什么都可以重新开始
+* 不乱于心，不困于情，不惧未来，不念过往。
+* 你说的很对，不过我不听。
 
-* 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至
-* 委屈受多了，给我再多糖也会扔
-* 生命中的全部偶然，其实都是命中注定
+## 那些很喜欢的句子
+----------------------
+* 我们毕生所求，不过是真爱和自由！
+* life sucks but you will love it.
+* 该经历的都经历过，该放下的都放下了，余下的，便是举重若轻，从容淡定。
 * 生活最厉害的招数是用心，其次就是仪式感
 * 其实我们每个人都是胆小鬼，有这样那样畏首畏尾的时刻。希望每一个心有想法的人，都能打破舒适圈，去追求不可想象的漂泊生活，勇敢又智慧，自由又有钱。
 
@@ -63,7 +77,6 @@ toc:
 * 没有什么对错，也没有什么谁比谁幸福。幸福这种东西，从来都是只有自己才知道。
 * 人生苦短三万天，为了面子骗骗别人没关系，别骗自己。
 * 1.人际交往中的期望值管理能力；2.阈值自控意识；3.应对主观时空扭曲的能力
-* 不乱于心，不困于情，不惧未来，不念过往。
 * 死亡并不是生命的终点，遗忘才是。
 * 爱情是有浓度的。
 * 有些事情，如果你现在不去做，那么也许你一辈子都没有机会了。
@@ -78,7 +91,6 @@ toc:
 * 我很清楚的知道，这条路走下去会很艰难，但不走好像又会后悔一辈子。
 * 最痛苦的事，不是失败，是我本可以。
 * 不要羡慕别人比你过的好，他们假装的。
-* 你说的很对，不过我不听。
 
 <center>
 最好的爱情就是
