--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -7,35 +7,56 @@ toc:
 ---
 
 <center>![蹦极](/assets/20180202_shoucang/shoucang.jpeg)</center>
+<!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie-->
 
 ## 那些很文艺的句子
 ----------------------
-
 * 人间烟火，山河远阔。 无一是你，无一不是你。
 * 我已亭亭，无忧亦无惧。
 * 永远年轻，永远热泪盈眶，永远在路上。
 <!--more-->
-* 愿你余生遇良人，爱得不慌不忙，坦坦荡荡。
+* 不乱于心，不困于情，不惧未来，不念过往。
 * 生命来来往往，来日并不方长。
-* 这个世界疯狂，没人性，腐败。你却一直清醒，温柔，一尘不染。
-* 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至
-* 委屈受多了，给我再多糖也会扔
-* 生命中的全部偶然，其实都是命中注定
+* 生命中的全部偶然，其实都是命中注定。
+* 愿你余生遇良人，爱得不慌不忙，坦坦荡荡。
 <center>
 摊开双手
 我空无一物
 天空有云
 舒卷于胸
 </center>
-* 日子熬我，我熬粥
-* 多一些不需要理由的开心
+
+<center>
+我希望有个如你一般的人
+如山间清爽的风
+如古城温暖的光
+从清晨到夜晚
+由山野到书房
+只要最后是你
+</center>
+
+## 丧、丧、丧
+----------------------
+* 这个世界疯狂，没人性，腐败。你却一直清醒，温柔，一尘不染。
+* 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至。
+* 多一些不需要理由的开心。
+* 日子熬我，我熬粥（日子熬人，随便活吧）。
+* 我们都是熬不过世俗的普通人。
+* 委屈受多了，给我再多糖也会扔。
+* 别在最好的年龄，辜负了最好的自己。
 * 一直都在辜负生活，所以生活也不曾善待我们
 * 在最难过的那天夜里，我是一个人过的
 * 究竟什么样的终点，才配得上这一路颠沛流离
 * 要长大 要乖 要努力 要不负众望
 * 喜欢有阳光的早上 好像什么都可以重新开始
-* 不乱于心，不困于情，不惧未来，不念过往。
 * 你说的很对，不过我不听。
+* 好坏都收下，然后一声不响继续生活。
+* 人生本来就没有相欠，情出自愿，事过无悔。
+* 推开自己喜欢的东西是成长。
+<!--有缘无份的时候好聚好散是最好的尊重。-->
+<!--从不认识到不认识，这就是我们之间所有的故事。-->
+* 现在的生活，并不是我想要的，但确实是我自找的，所以活该也认了。
+* 不后悔遇见了谁，只是后悔，为何成了现在的模样。
 
 ## 那些很喜欢的句子
 ----------------------
