--- a/source/_posts/项目中的实用技巧.md
+++ b/source/_posts/项目中的实用技巧.md
@@ -6,11 +6,14 @@ tags: [技巧]
 toc:
 ---
 
-### 避免在一个界面上同时点击多个button （整个项目）
+### setExclusiveTouch
+* 避免在一个界面上同时点击多个UIButton导致同时响应多个方法，在AppDelegate启动应用时添加：
 ```
 [[UIButton appearance] setExclusiveTouch:YES];
 ```
 <!--more-->
+### 给AppDelegate添加类目
+
 ### AppDelegate中微信、支付宝支付接收到的回调可以分别添加helper处理
 
 ### 判断程序是否是从杀死状态进入(接受远程推送)
