--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -57,6 +57,7 @@ toc:
 <!--从不认识到不认识，这就是我们之间所有的故事。-->
 * 现在的生活，并不是我想要的，但确实是我自找的，所以活该也认了。
 * 不后悔遇见了谁，只是后悔，为何成了现在的模样。
+* 不想说这个世界什么坏话了，都是我不好
 
 ## 那些很喜欢的句子
 ----------------------
@@ -90,6 +91,38 @@ toc:
  > 在有生的瞬间能遇见你，竟花光我所有的运气——林夕
  > 你走，我不送你。你来，无论多大风多大雨，我要去接你。——梁实秋
  > 哪里会有人喜欢孤独,不过是不喜欢失望。——村上春树《挪威的森林》
+ 
+ ## 情感
+ * 爱情是有浓度的。
+ * 始于颜值，陷于才华，忠于人品。
+ * 先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
+ * 如果有幸遇到能凑合忍得了的人，就用尽全力抓紧，无论如何都不要放手。
+ * 幸福就是找个温暖的人过一辈子。
+ * 爱一个人最好的方式，是经营好自己，给对方一个优质的爱人。不是拼命对一个人好，那人就会拼命爱你。俗世的爱情难免有现实的一面：你有价值，你的付出才有人重视。
+ * 我很清楚的知道，这条路走下去会很艰难，但不走好像又会后悔一辈子。
+ * 你看世人多奇怪。喜欢的人得不到，得到了不珍惜，在一起时怀疑，失去了怀念，怀念的想相见，相见的又恨晚。终其一生，满是遗憾。
+ * 荷尔蒙只负责一见钟情，柏拉图负责白头到老。
+ 
+ <center>
+ 最好的爱情就是
+ 两个人都是独立的个体
+ 都可以不用掩饰的做自己
+ 都有自己的追求和梦想
+ 但是在我们独自打拼的时光里
+ 都会把彼此放在心上
+ 都会知道我们的每一份努力都是为了
+ 两个人的支流最终能汇聚成爱情的长河
+ 往时光的尽头永无止境的流淌
+ </center>
+ 
+ <center>
+ 一生只谈一次恋爱是最好的
+ 经历的太多了，会麻木
+ 分离的多了，会习惯
+ 换恋人多了，会比较
+ 到最后，你不会再相信爱情
+ 其实对于爱情，越单纯越幸福
+ </center>
 
 ## 那些应该牢记的道理
 ----------------------
@@ -99,40 +132,12 @@ toc:
 * 人生苦短三万天，为了面子骗骗别人没关系，别骗自己。
 * 1.人际交往中的期望值管理能力；2.阈值自控意识；3.应对主观时空扭曲的能力
 * 死亡并不是生命的终点，遗忘才是。
-* 爱情是有浓度的。
 * 有些事情，如果你现在不去做，那么也许你一辈子都没有机会了。
 * 放纵的灵魂就只配活成一摊松垮臃肿的肉。
-* 始于颜值，陷于才华，忠于人品。
 * 每个人都是困于人世的西西弗斯，也许我们无法逃脱，勇于选择并且终于选择就好。
 * 美丽是实实在在的。是劳累之后立即洗净的那张脸；是走出厨房之后擦满护肤霜的那双手；是临出门前涂上口红的那瓣唇；是走路时傲然挺起的那片腰身；是面对各种诱惑的那份节制；是人群里永远恰当的那抹微笑；是面对荣辱水远镇定的那副神情……
-* 先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
-* 如果有幸遇到能凑合忍得了的人，就用尽全力抓紧，无论如何都不要放手。
-* 幸福就是找个温暖的人过一辈子。
-* 爱一个人最好的方式，是经营好自己，给对方一个优质的爱人。不是拼命对一个人好，那人就会拼命爱你。俗世的爱情难免有现实的一面：你有价值，你的付出才有人重视。
-* 我很清楚的知道，这条路走下去会很艰难，但不走好像又会后悔一辈子。
 * 最痛苦的事，不是失败，是我本可以。
 * 不要羡慕别人比你过的好，他们假装的。
-
-<center>
-最好的爱情就是
-两个人都是独立的个体
-都可以不用掩饰的做自己
-都有自己的追求和梦想
-但是在我们独自打拼的时光里
-都会把彼此放在心上
-都会知道我们的每一份努力都是为了
-两个人的支流最终能汇聚成爱情的长河
-往时光的尽头永无止境的流淌
-</center>
-
-<center>
-一生只谈一次恋爱是最好的
-经历的太多了，会麻木
-分离的多了，会习惯
-换恋人多了，会比较
-到最后，你不会再相信爱情
-其实对于爱情，越单纯越幸福
-</center>
 
 ### 自身提升：
 * 干净的圈子，规律的生活，中意的人
@@ -141,6 +146,7 @@ toc:
 * 美丽包括你全方位的肤质，气色，容貌，身材，体态，甚至包括你说法的语气方式，你的谈吐，见识，又细碎到你的生活习惯。
 * 自律即自由。
 * 自律一段时间被打回原形，你忽略了重要的一点：自身非常强烈想要实现一个目标，并把一系列有些挑战性的行动固化成自然的习惯。
+* 今天不想跑，所以才去跑。这才是长距离跑者的思维方式。
     
 * 1.早睡早起身体好
 * 2.微笑是一种思维
