更新面试题实战

--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -91,6 +91,8 @@ toc:
  > 在有生的瞬间能遇见你，竟花光我所有的运气——林夕
  > 你走，我不送你。你来，无论多大风多大雨，我要去接你。——梁实秋
  > 哪里会有人喜欢孤独,不过是不喜欢失望。——村上春树《挪威的森林》
+ > 曾以为走不出的日子，现在都回不去了。——村上春树
+ > 在茫茫人海中相遇相知相守，无论谁都不会一帆风顺，只有一颗舍得付出懂得感恩的心，才能拥有一生的爱和幸福。——宫崎骏
  
  ## 情感
  * 爱情是有浓度的。
@@ -123,6 +125,21 @@ toc:
  到最后，你不会再相信爱情
  其实对于爱情，越单纯越幸福
  </center>
+ 
+ * 时间真的是这个世界上最好的跨度，让惨痛变得苍白，让执着的人选择离开，然后经理沧桑，人来人往；你会明白，万般皆是命，半点不由人。
+ * 爱的时候不辜负人，玩的时候不辜负风景，睡觉时不辜负床，一个人时不辜负自己。
+ * 你来人间一趟，不是来刷任务的，你该好好享受阳光、雨露和爱。
+ * 生活是场清醒的梦，梦到醒不来的梦。
+ * 偏要在这薄情的世界，深情地活。
+ * 就这一生，可以快乐就别难过。
+ * 希望日子，和我都不难过，干净脱俗温柔上进。
+ * 一生只需一人，知我冷暖懂我悲欢。
+ 
+## 励志
+* 不辜负时间的馈赠，努力活成自己喜欢的模样。
+* 要酷，要优秀，要成为别人的可望不可及。
+* 少吃真的会瘦，瘦了真的好看，好看真的有用。
+* 狠人的三大表现：说减肥就减肥，说不玩手机就不玩手机，说睡觉就睡觉。
 
 ## 那些应该牢记的道理
 ----------------------
@@ -138,6 +155,7 @@ toc:
 * 美丽是实实在在的。是劳累之后立即洗净的那张脸；是走出厨房之后擦满护肤霜的那双手；是临出门前涂上口红的那瓣唇；是走路时傲然挺起的那片腰身；是面对各种诱惑的那份节制；是人群里永远恰当的那抹微笑；是面对荣辱水远镇定的那副神情……
 * 最痛苦的事，不是失败，是我本可以。
 * 不要羡慕别人比你过的好，他们假装的。
+* 没有真正幸福的人，只有比较想得开的人。
 
 ### 自身提升：
 * 干净的圈子，规律的生活，中意的人
