--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -6,12 +6,13 @@ tags:
 toc:
 ---
 
-<center>![蹦极](/assets/20180202_shoucang/shoucang.jpeg)</center>
+<center>![收藏](/assets/20180202_shoucang/shoucang.jpeg)</center>
 <!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie-->
 
 ## 那些很文艺的句子
 ----------------------
 * 人间烟火，山河远阔。 无一是你，无一不是你。
+
 * 我已亭亭，无忧亦无惧。
 * 永远年轻，永远热泪盈眶，永远在路上。
 <!--more-->
@@ -19,6 +20,7 @@ toc:
 * 生命来来往往，来日并不方长。
 * 生命中的全部偶然，其实都是命中注定。
 * 愿你余生遇良人，爱得不慌不忙，坦坦荡荡。
+* 愿你一生纯良，不舍爱与自由。
 <center>
 摊开双手
 我空无一物
@@ -66,6 +68,7 @@ toc:
 * 该经历的都经历过，该放下的都放下了，余下的，便是举重若轻，从容淡定。
 * 生活最厉害的招数是用心，其次就是仪式感
 * 其实我们每个人都是胆小鬼，有这样那样畏首畏尾的时刻。希望每一个心有想法的人，都能打破舒适圈，去追求不可想象的漂泊生活，勇敢又智慧，自由又有钱。
+* 我们每个人，都有属于自己的生活方式，我欣赏你生活的浪漫热烈，你也无需质疑我的岁月静好。
 
 ## 那些很有哲理的句子
 ----------------------
@@ -93,6 +96,8 @@ toc:
  > 哪里会有人喜欢孤独,不过是不喜欢失望。——村上春树《挪威的森林》
  > 曾以为走不出的日子，现在都回不去了。——村上春树
  > 在茫茫人海中相遇相知相守，无论谁都不会一帆风顺，只有一颗舍得付出懂得感恩的心，才能拥有一生的爱和幸福。——宫崎骏
+ > 尽可能爱的单纯一点，尽可能活的纯洁一点，尽可能活的有良心一点，尽可能在成为一个成功的人同时成为一个可爱的人，尽可能活的美一点。——陈果
+ > 肉体是每个人的神殿，不管里面供奉的是什么，都应该好好保持它的强韧、美丽和清洁。——村上春树
  
  ## 情感
  * 爱情是有浓度的。
@@ -126,7 +131,7 @@ toc:
  其实对于爱情，越单纯越幸福
  </center>
  
- * 时间真的是这个世界上最好的跨度，让惨痛变得苍白，让执着的人选择离开，然后经理沧桑，人来人往；你会明白，万般皆是命，半点不由人。
+ * 时间真的是这个世界上最好的跨度，让惨痛变得苍白，让执着的人选择离开，然后经历沧桑，人来人往；你会明白，万般皆是命，半点不由人。
  * 爱的时候不辜负人，玩的时候不辜负风景，睡觉时不辜负床，一个人时不辜负自己。
  * 你来人间一趟，不是来刷任务的，你该好好享受阳光、雨露和爱。
  * 生活是场清醒的梦，梦到醒不来的梦。
@@ -134,12 +139,19 @@ toc:
  * 就这一生，可以快乐就别难过。
  * 希望日子，和我都不难过，干净脱俗温柔上进。
  * 一生只需一人，知我冷暖懂我悲欢。
+ * 梦里出现的人，醒来时就该去见他。The people in your dreams,you should call them when you're awake.
+ * 只有不曾被爱过的人，才知道爱的珍贵。
+ * 幸福其实很简单：有人爱，有事做，有期待。
  
 ## 励志
 * 不辜负时间的馈赠，努力活成自己喜欢的模样。
 * 要酷，要优秀，要成为别人的可望不可及。
 * 少吃真的会瘦，瘦了真的好看，好看真的有用。
 * 狠人的三大表现：说减肥就减肥，说不玩手机就不玩手机，说睡觉就睡觉。
+* 懂得自制，方能掌控人生。也许阻碍你变好的敌人，自始至终，就只是懒惰的自己而已。
+* 自律，生长，爱美食，也爱其他。
+* 世界上最遥远的距离不是远方，而是你不敢迈出去的那一步
+* 精神状态的好，完完全全体现在肉体上。
 
 ## 那些应该牢记的道理
 ----------------------
@@ -152,12 +164,13 @@ toc:
 * 有些事情，如果你现在不去做，那么也许你一辈子都没有机会了。
 * 放纵的灵魂就只配活成一摊松垮臃肿的肉。
 * 每个人都是困于人世的西西弗斯，也许我们无法逃脱，勇于选择并且终于选择就好。
-* 美丽是实实在在的。是劳累之后立即洗净的那张脸；是走出厨房之后擦满护肤霜的那双手；是临出门前涂上口红的那瓣唇；是走路时傲然挺起的那片腰身；是面对各种诱惑的那份节制；是人群里永远恰当的那抹微笑；是面对荣辱水远镇定的那副神情……
+* 美丽是实实在在的。是劳累之后立即洗净的那张脸；是走出厨房之后擦满护肤霜的那双手；是临出门前涂上口红的那瓣唇；是走路时傲然挺起的那片腰身；是面对各种诱惑的那份节制；是人群里永远恰当的那抹微笑；是面对荣辱永远镇定的那副神情……
 * 最痛苦的事，不是失败，是我本可以。
 * 不要羡慕别人比你过的好，他们假装的。
 * 没有真正幸福的人，只有比较想得开的人。
 
 ### 自身提升：
+* 事不拖，话不多，人不作
 * 干净的圈子，规律的生活，中意的人
 * 温柔，持家，自信，睿智，气质，情趣，大度，漂亮，幽默，情调
 * 不要：抱怨，炫耀，数落，搬弄是非
@@ -165,13 +178,15 @@ toc:
 * 自律即自由。
 * 自律一段时间被打回原形，你忽略了重要的一点：自身非常强烈想要实现一个目标，并把一系列有些挑战性的行动固化成自然的习惯。
 * 今天不想跑，所以才去跑。这才是长距离跑者的思维方式。
+* 人的堕落是从身体开始的，好好锻炼吧。你的身材里藏着你的自律。
+* 要变成那个存在于你渴望里的身材窈窕、文艺洒脱、生活精致美好的你。
     
 * 1.早睡早起身体好
 * 2.微笑是一种思维
 * 3.管住嘴是一种本事
 * 4.做一个清清爽爽的人
 * 5.给自己找一个能常年坚持的运动项目
-* 6.尽量除去走走看看
+* 6.尽量出去走走看看
 
 ### 沟通注意：
 * 听别人把话说完
