--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -6,7 +6,7 @@ tags:
 toc:
 ---
 
-<center>![收藏](/assets/20180202_shoucang/shoucang.jpeg)</center>
+<center>![收藏](/assets/20180202_shoucang/shoucang1.jpeg)</center>
 <!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie-->
 
 ## 那些很文艺的句子
@@ -36,6 +36,10 @@ toc:
 由山野到书房
 只要最后是你
 </center>
+
+你不愿意种花，你说，“我不愿意看见它，一点点凋落”，是的，为了避免结束，你避免了一切开始。——顾城《避免》 
+
+<center>![收藏](/assets/20180202_shoucang/shoucang.jpeg)</center>
 
 ## 丧、丧、丧
 ----------------------
