--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -6,8 +6,9 @@ tags:
 toc:
 ---
 
-<center>![收藏](/assets/20180202_shoucang/shoucang1.jpeg)</center>
+<center>![收藏](/assets/20180202_shoucang/shoucang1.jpg)</center>
 <!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie-->
+
 
 ## 那些很文艺的句子
 ----------------------
@@ -37,12 +38,38 @@ toc:
 只要最后是你
 </center>
 
-你不愿意种花，你说，“我不愿意看见它，一点点凋落”，是的，为了避免结束，你避免了一切开始。——顾城《避免》 
+* 你不愿意种花，你说，“我不愿意看见它，一点点凋落”，是的，为了避免结束，你避免了一切开始。——顾城《避免》 
+* 你看这字里行间，年复一年，春光不必趁早，冬霜不会迟到，相聚别离，都是刚刚好。 ​​​​
 
-<center>![收藏](/assets/20180202_shoucang/shoucang.jpeg)</center>
+### 沈三废《每个人都是一座孤岛》
+* 我们遇见很多人，和很多人分开，又和很多人再相遇。大家都一样，没有什么不同，一样的孤单，一样的幸福。
+* 人生来是寂寞的，赤条条来到这个陌生的世界上，行走一世，最后又孤单地走了，如同幻梦一般。人们说，每个人都是一座孤岛，快乐着自己的快乐，痛苦着自己的痛苦，与这个世界无关。我是这句话的信徒。
+* 总要经历一段活在自己世界中的时刻，在那里才能明白自己最想要的是什么，没了那些遮盖双眼的迷雾，一切都变得清晰起来。
+* 喜欢一个人，就会没来由的自卑。从来粗心大意的自己，开始变得小心翼翼。每一天都做心理斗争，每一天都想着放弃，可却每一天都坚持下来。懦弱和勇敢，原来只隔着一层喜欢。
+* 愿你终有一天，所有压抑的烦恼，说不出的痛楚，难于表达的情感，都能毫不掩盖发泄出来。你会发现，原来生活也能这么美丽，就连那些不堪的东西，都变得越发璀璨起来。
+* 逆着光前行，总会经历比别人困难的事情。在困难中逆行，才造就了世界上独一无二的你。
+* 有的时候，我喜欢就这样安静地坐着看一旁忙碌的城市，仿佛自己不是城市中的一员，我只是个看客。看他们行色匆匆，看他们悲伤与狂喜，看他们面无表情的样子。
+* 记忆被时间绑架，回忆被心软美化，最终只留下了你的好。
+* 时间就是让你觉得走得好慢，可是不经意间又快到让你无法接受。
+* 岁月漫长，分离总会再次相遇，误会也会慢慢澄清，孤零零的你也总有一天会得到归宿。命运已把所有都规划好，该会好的总会好。
+* 于是渐渐明白，能否享受一个人的时光，能否经营好人生这座孤岛，关键看内心。内心从容，便是一个人孤处，那也是最美的时光；内心孤单，便是处于闹市，那也是一群人的寂寞。那种依靠外物的刺激形成的欢愉，眨眼之间便烟消云散，最后都会是一个人品尝寂寞的滋味。
+* 趁着年轻，多走一走，走到那个只有在梦里才会出现的地方，去看那些想都想不出的艳丽风景。
+* 你可以用很长的一段时间去爱一个人，同样也可以努力忘掉他，长短与否，都是用心的结果。
+* 原地停留并不是一件不好的事，那些不被人仔细看过的风景，不被人注意的小美好，都藏在这些需要静下心来才能发现的时间里。
+* 愿你生活中处处充满笑容，不再有大风大浪的袭击，只有这小小静谧的美好。
+* 感觉是个骗子，它像是个没有长大的小孩，我行我素，想要离开，想要逃避，想要新鲜的地方和新鲜的面孔，可是最后又会后悔，希望时光倒流。
+* 肯定是真挚过的，那些说出来的话在那一刻必定是诚意满满的。只是最后，时光亏欠了承诺，你也慢慢离开了我。
+* 心事随着时间慢慢变冷，不再喜欢复杂轰轰烈烈的感情，能简单干脆表达爱即可，反正都一样，爱能有什么不同。
+* 很羡慕鸟儿，它们想去哪里拍拍翅膀就能飞去，说走就走。不像我们，人还在，心却走了。
+* 因为不喜欢说再见，所以逃得快，用所有的行动去避开结局，就以为不会结束。
+* 刚走到最后再回首，身边已经没有来时伴。丢在人生旅途中的人，不好找，也寻不回。
+* 他们是过去的人，就该让他们活在回忆里。
+
 
 ## 丧、丧、丧
 ----------------------
+<center>![收藏](/assets/20180202_shoucang/shoucang.jpeg)</center>
+
 * 这个世界疯狂，没人性，腐败。你却一直清醒，温柔，一尘不染。
 * 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至。
 * 多一些不需要理由的开心。
@@ -64,6 +91,7 @@ toc:
 * 现在的生活，并不是我想要的，但确实是我自找的，所以活该也认了。
 * 不后悔遇见了谁，只是后悔，为何成了现在的模样。
 * 不想说这个世界什么坏话了，都是我不好
+<!--如果每个人都是一颗小星球，逝去的亲友就是身边的暗物质。我愿能再见你，我知我再见不到你。但你的引力仍在。我感激我们的光锥曾彼此重叠，而你永远改变了我的星轨。纵使再不能相见，你仍是我所在的星系未曾分崩离析的原因，是我宇宙之网的永恒组成。-->
 
 ## 那些很喜欢的句子
 ----------------------
@@ -104,6 +132,7 @@ toc:
  > 肉体是每个人的神殿，不管里面供奉的是什么，都应该好好保持它的强韧、美丽和清洁。——村上春树
  
  ## 情感
+ ----------------------
  * 爱情是有浓度的。
  * 始于颜值，陷于才华，忠于人品。
  * 先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
@@ -148,6 +177,7 @@ toc:
  * 幸福其实很简单：有人爱，有事做，有期待。
  
 ## 励志
+----------------------
 * 不辜负时间的馈赠，努力活成自己喜欢的模样。
 * 要酷，要优秀，要成为别人的可望不可及。
 * 少吃真的会瘦，瘦了真的好看，好看真的有用。
@@ -173,7 +203,7 @@ toc:
 * 不要羡慕别人比你过的好，他们假装的。
 * 没有真正幸福的人，只有比较想得开的人。
 
-### 自身提升：
+### 自身提升
 * 事不拖，话不多，人不作
 * 干净的圈子，规律的生活，中意的人
 * 温柔，持家，自信，睿智，气质，情趣，大度，漂亮，幽默，情调
@@ -184,6 +214,7 @@ toc:
 * 今天不想跑，所以才去跑。这才是长距离跑者的思维方式。
 * 人的堕落是从身体开始的，好好锻炼吧。你的身材里藏着你的自律。
 * 要变成那个存在于你渴望里的身材窈窕、文艺洒脱、生活精致美好的你。
+* 保持理智的最佳方法就是彻底掌握悲观主义，愤怒和失望就是源于乐观主义的预期。
     
 * 1.早睡早起身体好
 * 2.微笑是一种思维
